feat: Add CSV export button (disabled), improve SEO keywords, fix PDF export for all CalculatorFrame pages

--- a/src/pages/charges.html
+++ b/src/pages/charges.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculateur Charges Copropriété 2025 - Estimation détaillée</title>
+    <title>Calculateur Charges Copropriété 2025 - Estimation Complète</title>
     <meta
       name="description"
-      content="Estimez vos charges de copropriété 2025 : charges courantes, exceptionnelles selon la taille, l'âge et les équipements."
+      content="Calculez charges copropriété 2025 : charges courantes, provisions travaux, tantièmes, chauffage collectif, ascenseur, syndic. Estimation avant achat appartement."
     />
     <meta
       name="keywords"
-      content="charges copropriété 2025, calcul charges syndic, estimation coûts copropriété, charges courantes exceptionnelles, honoraires syndic, charges par m2, budget copropriété, frais entretien immeuble, calculateur gratuit"
+      content="charges copropriété 2025 estimation, calcul tantièmes copropriété, charges courantes mensuelles, provisions travaux exceptionnels, frais syndic copropriété, chauffage collectif charges, ascenseur entretien coût, charges récupérables locataire, assemblée générale copropriété, quote-part travaux ravalement, charges copropriété au m2, diagnostic technique global DTG, fonds travaux obligatoire, contestation charges copropriété, copropriété avec sans gardien, charges moyennes paris lyon, immeuble ancien charges élevées"
     />
     <meta name="google-adsense-account" content="ca-pub-2209781252231399" />
 
