--- a/src/pages/ik.html
+++ b/src/pages/ik.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculateur Indemnités Kilométriques 2024 - Barème Officiel</title>
+    <title>
+      Calculateur Indemnités Kilométriques 2025 - Barème Fiscal Officiel
+    </title>
     <meta
       name="description"
-      content="Calculez vos indemnités kilométriques selon le barème fiscal officiel 2024. Simulation gratuite pour voiture et deux-roues, déduction fiscale optimisée."
+      content="Calculez vos indemnités kilométriques 2025 selon le barème fiscal officiel. Simulation gratuite pour voiture, deux-roues, déduction impôts, frais réels professionnels."
     />
     <meta
       name="keywords"
-      content="indemnités kilométriques 2024, barème fiscal, déduction kilométrique, frais de déplacement, impôts"
+      content="indemnités kilométriques 2025, barème IK 2025, calcul frais kilométriques, déduction fiscale km, frais réels professionnels, barème urssaf indemnités, calcul trajet domicile travail, remboursement km employeur, auto-entrepreneur frais déplacement, calcul ik 5cv 7cv, indemnité kilométrique voiture électrique, frais professionnels déductibles 2025, simulation frais réels vs abattement 10%, barème fiscal automobile, trajet professionnel déduction impôts"
     />
   </head>
   <body class="bg-gray-50">
