--- a/src/pages/ponts.html
+++ b/src/pages/ponts.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Calendrier Ponts et Jours Fériés 2025-2026 - Planification Congés
+      Calendrier Ponts et Jours Fériés 2025-2026 - Planification Congés Optimale
     </title>
     <meta
       name="description"
-      content="Calendrier des jours fériés 2025-2026 et opportunités de ponts. Optimisez vos congés et planifiez vos vacances avec notre outil gratuit."
+      content="Calendrier complet jours fériés 2025-2026 avec opportunités de ponts. Optimisez vos congés, RTT et planifiez vacances. Meilleurs ponts mai août 2025."
     />
     <meta
       name="keywords"
-      content="jours fériés 2025, ponts 2026, calendrier vacances, planification congés, jours fériés France"
+      content="jours fériés 2025 france, ponts 2025 calendrier, meilleurs ponts 2025, calendrier vacances scolaires 2025, planification congés payés, optimiser RTT 2025, pont 1er mai 2025, pont 8 mai 2025, pont ascension 2025, pont 15 août 2025, week-end prolongé 2025, jours fériés tombent samedi dimanche, stratégie congés 2025, demande congés anticipée, calendrier RH 2025, ponts 2026 prévision, fêtes mobiles 2025 pâques pentecôte"
     />
   </head>
   <body class="bg-gray-50">
@@ -211,7 +211,7 @@
             setTimeout(checkAndUpdateButton, 100);
           }
         };
-        
+
         // Démarrer la vérification après un court délai
         setTimeout(checkAndUpdateButton, 200);
       });
