--- a/src/pages/pret.html
+++ b/src/pages/pret.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Simulateur Prêt Immobilier 2025 - Capacité d'emprunt et mensualités
+      Simulateur Prêt Immobilier 2025 - Capacité Emprunt et Taux Actuels
     </title>
     <meta
       name="description"
-      content="Simulez votre prêt immobilier 2025 : capacité d'emprunt, mensualités, assurance, frais. Calcul précis selon les taux actuels."
+      content="Simulateur prêt immobilier 2025 : capacité emprunt selon revenus, taux actuels, mensualités, assurance emprunteur, PTZ primo-accédant. Calcul TAEG, frais, garanties."
     />
     <meta
       name="keywords"
-      content="simulateur prêt immobilier gratuit, capacité emprunt 2025, calcul mensualités crédit, taux prêt immobilier, assurance emprunteur, simulation crédit maison, calculateur hypothèque, co-emprunteur, TAEG, durée prêt, apport personnel"
+      content="simulateur prêt immobilier 2025 gratuit, capacité emprunt selon salaire, taux crédit immobilier janvier 2025, calcul mensualités crédit maison, combien emprunter avec 2000 euros mois, simulation primo accédant, prêt taux zéro PTZ 2025, assurance emprunteur comparaison, taux endettement 35% calcul, TAEG définition calcul, durée prêt 15 20 25 ans, apport personnel minimum obligatoire, co-emprunteur avantages conditions, frais dossier bancaire, frais garantie hypothèque caution, simulation rachat crédit, taux fixe variable 2025"
     />
     <meta name="google-adsense-account" content="ca-pub-2209781252231399">
 
