--- a/src/pages/taxe.html
+++ b/src/pages/taxe.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simulateur Taxe Foncière 2025 - Estimation Gratuite</title>
+    <title>Simulateur Taxe Foncière 2025 - Calcul et Estimation Gratuite</title>
     <meta
       name="description"
-      content="Estimez votre taxe foncière 2025 selon la valeur locative cadastrale et les taux communaux. Simulation gratuite avec abattements et exemptions."
+      content="Calculez votre taxe foncière 2025 selon valeur locative cadastrale, taux communaux départementaux. Exonérations, dégrèvements, plafonnement selon revenus."
     />
     <meta
       name="keywords"
-      content="taxe foncière 2025, simulation taxe foncière, valeur locative cadastrale, taux communal, abattement fiscal"
+      content="taxe foncière 2025 calcul, simulation taxe foncière gratuite, valeur locative cadastrale explication, taux communal taxe foncière, exonération taxe foncière personnes âgées, dégrèvement taxe foncière revenus modestes, plafonnement taxe foncière, abattement résidence principale, taxe foncière logement neuf, construction neuve exonération 2 ans, taxe ordures ménagères calcul, comment calculer taxe foncière, augmentation taxe foncière 2025, réduction taxe foncière économies énergie, contestation avis taxe foncière"
     />
   </head>
   <body class="bg-gray-50">
