--- a/src/pages/travail.html
+++ b/src/pages/travail.html
@@ -3,16 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Calculateur Durée Légale du Travail - Heures Supplémentaires 2025
-    </title>
+    <title>Calculateur Heures Supplémentaires 2025 - Majorations et Paie</title>
     <meta
       name="description"
-      content="Calculez les heures supplémentaires, majorations et repos compensateur selon le code du travail. Outil gratuit pour salariés et employeurs."
+      content="Calculez heures supplémentaires 2025 : majorations 25% 50%, repos compensateur, défiscalisation. Selon code du travail, convention collective, contrat 35h 39h."
     />
     <meta
       name="keywords"
-      content="heures supplémentaires, durée légale travail, majorations, repos compensateur, code du travail 2025"
+      content="heures supplémentaires 2025 calcul, majoration 25% 50% heures sup, durée légale travail 35h, contingent annuel heures supplémentaires, repos compensateur équivalent, défiscalisation heures sup 2025, calcul paie heures supplémentaires, convention collective heures sup, contrat 39h heures supplémentaires, droit refus heures supplémentaires, paiement ou récupération heures sup, taux horaire brut calcul, heures complémentaires temps partiel, plafond exonération charges sociales, code travail article l3121, heures sup imposables 2025"
     />
   </head>
   <body class="bg-gray-50">
