feat: Add Bing Webmaster Tools verification meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
       content="calculateur gratuit, frais notaire 2025, simulateur prêt immobilier, plus-value immobilière, charges copropriété, outils financiers, barêmes officiels, simulation achat maison, crédit immobilier, calcul impôts, estimation coûts, france"
     />
     <meta name="google-adsense-account" content="ca-pub-2209781252231399" />
+    
+    <!-- Bing Webmaster Tools -->
+    <meta name="msvalidate.01" content="2437455D3B6185F2DF179C0E4BEB646E" />
 
     <!-- Favicon -->
     <link
