--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -204,6 +204,42 @@
         </p>
       </div>
 
+      <!-- Encart page pivot départements -->
+      <div
+        class="mb-12 bg-gradient-to-r from-blue-50 to-indigo-50 rounded-xl p-8 border-2 border-blue-200"
+      >
+        <div class="flex items-center mb-4">
+          <span class="text-4xl mr-4">🗺️</span>
+          <h2 class="text-2xl font-bold text-gray-900">
+            Frais de notaire par département
+          </h2>
+        </div>
+        <p class="text-gray-700 mb-6 text-lg">
+          Découvrez les <strong>101 départements français</strong> avec leurs
+          frais de notaire 2025, prix au m² et simulations personnalisées.
+          Trouvez votre département en un clic !
+        </p>
+        <a
+          href="blog/frais-notaire-departements.html"
+          class="inline-flex items-center px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition-colors shadow-md"
+        >
+          <svg
+            class="w-5 h-5 mr-2"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M9 20l-5.447-2.724A1 1 0 013 16.382V5.618a1 1 0 011.447-.894L9 7m0 13l6-3m-6 3V7m6 10l4.553 2.276A1 1 0 0021 18.382V7.618a1 1 0 00-.553-.894L15 4m0 13V4m0 0L9 7"
+            />
+          </svg>
+          Voir tous les départements
+        </a>
+      </div>
+
       <!-- Articles Grid -->
       <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-2">
         <!-- Article 1 : Export PDF -->
