feat: Optimize CTR with emojis and catchy meta descriptions
- Add engaging emojis to all page titles ()
- Rewrite meta descriptions to be more compelling and action-oriented
- Focus on potential savings (€) to attract clicks
- Shorten descriptions for better impact in search results
- Update Open Graph and Twitter meta tags accordingly

--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Blog LesCalculateurs.fr - Actualités Finance, Fiscalité, Immobilier 2025
+      📈 Blog Finance 2025 - Conseils pour économiser des milliers d'euros
     </title>
     <meta
       name="description"
-      content="Conseils pratiques, guides et actualités sur la finance personnelle, fiscalité, immobilier. Optimisez vos calculs et déclarations avec nos experts."
+      content="Découvrez nos guides experts pour optimiser vos impôts, frais de notaire et placements. Économisez des milliers d'euros avec nos conseils pratiques."
     />
     <meta
       name="keywords"
