--- a/src/pages/charges.html
+++ b/src/pages/charges.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculateur Charges Copropriété 2025 - Estimation Complète</title>
+    <title>🏢 Charges Copropriété 2025 - Évitez les mauvaises surprises</title>
     <meta
       name="description"
-      content="Calculez charges copropriété 2025 : charges courantes, provisions travaux, tantièmes, chauffage collectif, ascenseur, syndic. Estimation avant achat appartement."
+      content="Estimez vos charges de copropriété 2025 avant achat. Économisez des milliers d'euros en connaissant les coûts réels syndic, travaux, chauffage."
     />
     <meta
       name="keywords"
