--- a/src/pages/crypto-bourse.html
+++ b/src/pages/crypto-bourse.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Calculateur Plus-Value Crypto & Bourse 2025 - Impôts Bitcoin, Actions
+      ₿ Plus-values Crypto & Bourse 2025 - Optimisez vos impôts
     </title>
     <meta
       name="description"
-      content="Calculez vos plus-values crypto et bourse avec impôts : Bitcoin, Ethereum, actions. Flat tax 30%, abattements durée de détention, gain net après fiscalité."
+      content="Calculez vos plus-values crypto et bourse 2025. Réduisez vos impôts avec les abattements : Bitcoin, actions, ETF. Simulation fiscale gratuite."
     />
     <meta
       name="keywords"
