--- a/src/pages/financement.html
+++ b/src/pages/financement.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Calculateur Financement Personnel 2025 - Crédit Voiture, Travaux,
-      Équipements
+      💳 Financement Personnel 2025 - Crédit rapide et facile
     </title>
     <meta
       name="description"
-      content="Calculez votre capacité de financement pour tout achat : voiture, travaux, équipements. Simulation crédit avec apport, mensualités et ratio d'endettement."
+      content="Simulez votre crédit personnel 2025 : voiture, travaux, équipements. Calculez vos mensualités et obtenez une réponse de principe en 2 minutes."
     />
     <meta
       name="keywords"
