--- a/src/pages/ik.html
+++ b/src/pages/ik.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Calculateur Indemnités Kilométriques 2025 - Barème Fiscal Officiel
+      🚗 Indemnités Kilométriques 2025 - Calculez vos économies fiscales
     </title>
     <meta
       name="description"
-      content="Calculez vos indemnités kilométriques 2025 selon le barème fiscal officiel. Simulation gratuite pour voiture, deux-roues, déduction impôts, frais réels professionnels."
+      content="Calculez vos indemnités kilométriques 2025 et déduisez jusqu'à 5 000€ d'impôts. Barème fiscal officiel, simulation gratuite pour tous véhicules."
     />
     <meta
       name="keywords"
