--- a/src/pages/notaire.html
+++ b/src/pages/notaire.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculateur Frais de Notaire 2025 - Simulation Précise</title>
+    <title>🏠 Frais de Notaire 2025 - Économisez des milliers d'euros !</title>
     <meta
       name="description"
-      content="Calculez précisément vos frais de notaire 2025 selon les barèmes officiels. Simulation gratuite pour achat immobilier, frais d'acte, droits d'enregistrement et TVA."
+      content="Calculez vos frais de notaire 2025 et économisez jusqu'à 10 000€ sur votre achat immobilier. Simulation gratuite et précise selon votre département."
     />
     <meta
       name="keywords"
@@ -26,17 +26,17 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Calculateur Frais de Notaire 2025 - LesCalculateurs.fr"
+      content="🏠 Frais de Notaire 2025 - Économisez des milliers d'euros !"
     />
     <meta
       property="og:description"
-      content="Simulez précisément vos frais de notaire 2025 avec notre calculateur officiel"
+      content="Calculez vos frais de notaire 2025 et économisez jusqu'à 10 000€ sur votre achat immobilier"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Calculateur Frais de Notaire 2025" />
+    <meta name="twitter:title" content="🏠 Frais de Notaire 2025 - Économisez !" />
     <meta
       name="twitter:description"
-      content="Simulez précisément vos frais de notaire 2025"
+      content="Économisez des milliers d'euros sur vos frais de notaire 2025"
     />
 
     <!-- Favicon -->
