--- a/src/pages/plusvalue.html
+++ b/src/pages/plusvalue.html
@@ -11,11 +11,11 @@
 
     <!-- SEO & Social -->
     <title>
-      Calculateur Plus-value Immobilière 2025 - Impôt et abattements
+      💸 Plus-value Immobilière 2025 - Réduisez votre impôt !
     </title>
     <meta
       name="description"
-      content="Calculez l'impôt sur votre plus-value immobilière 2025 avec abattements et exonérations selon la durée de détention."
+      content="Calculez votre plus-value immobilière 2025 et optimisez vos abattements fiscaux. Économisez jusqu'à 30% d'impôts sur la vente de votre bien."
     />
     <meta
       name="keywords"
