--- a/src/pages/ponts.html
+++ b/src/pages/ponts.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Calendrier Ponts et Jours Fériés 2025-2026 - Planification Congés Optimale
+      📅 Ponts 2025-2026 - Optimisez vos congés payés
     </title>
     <meta
       name="description"
-      content="Calendrier complet jours fériés 2025-2026 avec opportunités de ponts. Optimisez vos congés, RTT et planifiez vacances. Meilleurs ponts mai août 2025."
+      content="Découvrez les meilleurs ponts 2025-2026 pour gagner jusqu'à 15 jours de congés supplémentaires. Calendrier optimisé pour vos vacances."
     />
     <meta
       name="keywords"
