--- a/src/pages/pret.html
+++ b/src/pages/pret.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Simulateur Prêt Immobilier 2025 - Capacité Emprunt et Taux Actuels
+      🏠 Prêt Immobilier 2025 - Combien pouvez-vous emprunter ?
     </title>
     <meta
       name="description"
-      content="Simulateur prêt immobilier 2025 : capacité emprunt selon revenus, taux actuels, mensualités, assurance emprunteur, PTZ primo-accédant. Calcul TAEG, frais, garanties."
+      content="Découvrez combien vous pouvez emprunter en 2025. Simulation gratuite : mensualités, taux, capacité d'emprunt selon vos revenus."
     />
     <meta
       name="keywords"
