--- a/src/pages/taxe.html
+++ b/src/pages/taxe.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simulateur Taxe Foncière 2025 - Calcul et Estimation Gratuite</title>
+    <title>💰 Taxe Foncière 2025 - Réduisez votre impôt immobilier</title>
     <meta
       name="description"
-      content="Calculez votre taxe foncière 2025 selon valeur locative cadastrale, taux communaux départementaux. Exonérations, dégrèvements, plafonnement selon revenus."
+      content="Calculez votre taxe foncière 2025 et trouvez les exonérations disponibles. Économisez jusqu'à 100€ par an avec nos conseils personnalisés."
     />
     <meta
       name="keywords"
