--- a/src/pages/travail.html
+++ b/src/pages/travail.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculateur Heures Supplémentaires 2025 - Majorations et Paie</title>
+    <title>⏰ Heures Sup 2025 - Majorations et défiscalisation</title>
     <meta
       name="description"
-      content="Calculez heures supplémentaires 2025 : majorations 25% 50%, repos compensateur, défiscalisation. Selon code du travail, convention collective, contrat 35h 39h."
+      content="Calculez vos heures supplémentaires 2025 et gagnez jusqu'à 50% de majoration. Défiscalisation possible, simulation gratuite selon votre contrat."
     />
     <meta
       name="keywords"
