feat: Implémentation export CSV pour calculateur notaire
- Création module csvExport.ts avec formatage uniforme (tous champs entre guillemets)
- Ajout support exportCSV dans CalculatorFrame avec config optionnelle
- Intégration bouton CSV dans pdfExport.js (gestion état activé/désactivé)
- Export CSV activé uniquement sur notaire.html avec données complètes:
  * Informations: type bien, département (numéro + nom), prix net, type emprunt
  * Calcul détaillé: émoluments, droits, frais divers, TVA, total
  * Montants formatés fr-FR avec espace pour alignement gauche uniforme
  * Pourcentages calculés dynamiquement
- CSV désactivé sur ik.html et taxe.html
- Correction problème alignement Excel (espace préfixe force texte)
- Correction erreur #ERROR! (remplacement === par ---)

--- a/src/pages/ik.html
+++ b/src/pages/ik.html
@@ -245,6 +245,31 @@
           </div>
         `;
         },
+        exportCSV: {
+          enabled: false,
+          filename: "indemnites-kilometriques-estimation.csv",
+          getCSVData: (result, values) => {
+            const data = result.data;
+            return {
+              headers: ["Paramètre", "Valeur"],
+              rows: [
+                [
+                  "Type de véhicule",
+                  data.typeVehicule === "voiture" ? "Voiture" : "Deux-roues",
+                ],
+                ["Distance annuelle (km)", data.kilometres],
+                ["Indemnité par km (€)", data.indemniteParKm.toFixed(3)],
+                ["Indemnités totales (€)", data.total],
+                ...(data.puissance
+                  ? [["Puissance fiscale", data.puissance]]
+                  : []),
+                ...(data.cylindree
+                  ? [["Cylindrée", data.cylindree.replace("_", " ")]]
+                  : []),
+              ],
+            };
+          },
+        },
       };
 
       // Masquer/afficher les champs selon le type de véhicule
