--- a/src/pages/notaire.html
+++ b/src/pages/notaire.html
@@ -33,7 +33,10 @@
       content="Calculez vos frais de notaire 2025 et économisez jusqu'à 10 000€ sur votre achat immobilier"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="🏠 Frais de Notaire 2025 - Économisez !" />
+    <meta
+      name="twitter:title"
+      content="🏠 Frais de Notaire 2025 - Économisez !"
+    />
     <meta
       name="twitter:description"
       content="Économisez des milliers d'euros sur vos frais de notaire 2025"
@@ -739,6 +742,113 @@
             </div>
           </div>
           `;
+        },
+        exportCSV: {
+          enabled: true,
+          filename: "frais_notaire_2025.csv",
+          getCSVData: (result, values) => {
+            const d = result.data;
+            // Forcer le texte en ajoutant un espace insécable au début
+            const fmt = (n) => {
+              if (!n || isNaN(n)) return " 0,00";
+              return (
+                " " +
+                n.toLocaleString("fr-FR", {
+                  minimumFractionDigits: 2,
+                  maximumFractionDigits: 2,
+                })
+              );
+            };
+            const pct = (montant) => {
+              if (!montant || isNaN(montant) || !d.prixAchat) return " 0,00%";
+              return " " + ((montant / d.prixAchat) * 100).toFixed(2) + "%";
+            };
+
+            // Mapper département → label complet
+            const deptMap = {
+              75: "75 - Paris",
+              13: "13 - Bouches-du-Rhône",
+              69: "69 - Rhône",
+              59: "59 - Nord",
+              92: "92 - Hauts-de-Seine",
+              93: "93 - Seine-Saint-Denis",
+              94: "94 - Val-de-Marne",
+              77: "77 - Seine-et-Marne",
+              78: "78 - Yvelines",
+              91: "91 - Essonne",
+              95: "95 - Val-d'Oise",
+              "06": "06 - Alpes-Maritimes",
+              31: "31 - Haute-Garonne",
+              33: "33 - Gironde",
+              44: "44 - Loire-Atlantique",
+              34: "34 - Hérault",
+              67: "67 - Bas-Rhin",
+              35: "35 - Ille-et-Vilaine",
+              38: "38 - Isère",
+              83: "83 - Var",
+              autre: "Autre département",
+            };
+
+            const typeBienLabel =
+              d.typeBien === "ancien"
+                ? "Bien ancien"
+                : d.typeBien === "neuf"
+                ? "Bien neuf"
+                : "Terrain";
+            const empruntLabel =
+              d.typeEmprunt === "sans"
+                ? "Sans emprunt"
+                : d.typeEmprunt === "sans_garantie"
+                ? "Sans garantie hypothécaire"
+                : "Avec garantie hypothécaire";
+            const departementLabel = deptMap[d.departement] || d.departement;
+
+            return {
+              headers: ["Description", "Montant (€)", "Pourcentage du prix"],
+              rows: [
+                ["--- INFORMATIONS ---", "", ""],
+                ["Type de bien", typeBienLabel, ""],
+                ["Département", departementLabel, ""],
+                ["Prix net immobilier", fmt(d.prixNetImmobilier), ""],
+                ["Type d'emprunt", empruntLabel, ""],
+                ["", "", ""],
+                ["--- CALCUL DES FRAIS ---", "", ""],
+                ["Prix d'acquisition", fmt(d.prixAchat), " 100%"],
+                ["Émoluments du notaire", fmt(d.emoluments), pct(d.emoluments)],
+                [
+                  "Droits d'enregistrement",
+                  fmt(d.droitsEnregistrement),
+                  pct(d.droitsEnregistrement),
+                ],
+                [
+                  "Frais divers (cadastre...)",
+                  fmt(d.fraisDivers),
+                  pct(d.fraisDivers),
+                ],
+                ...(d.fraisHypotheque > 0
+                  ? [
+                      [
+                        "Frais d'hypothèque",
+                        fmt(d.fraisHypotheque),
+                        pct(d.fraisHypotheque),
+                      ],
+                    ]
+                  : []),
+                ...(d.fraisTerrain > 0
+                  ? [
+                      [
+                        "Frais spécifiques terrain",
+                        fmt(d.fraisTerrain),
+                        pct(d.fraisTerrain),
+                      ],
+                    ]
+                  : []),
+                ["TVA (20%)", fmt(d.tva), pct(d.tva)],
+                ["", "", ""],
+                ["TOTAL FRAIS DE NOTAIRE", fmt(d.total), pct(d.total)],
+              ],
+            };
+          },
         },
       };
 
