feat: ajout comparaison multi-villes avec Chart.js et données par département
 Nouvelles fonctionnalités:
- Comparaison interactive jusqu'à 4 villes avec graphique Chart.js
- Données spécifiques par département (taux + frais divers)
- Graphique en barres colorées (vert pour le moins cher)
- Export CSV des comparaisons
- Calcul automatique des économies possibles
- Modal de sélection de ville avec auto-calcul

 Données:
- Nouveau fichier departements.json avec données par département
- Taux droits: 4.5% (Corse) à 5.9% (Île-de-France)
- Frais cadastre, conservation, formalités variables

 SEO:
- Section dédiée comparaison avec 3 cartes fonctionnalités
- 3 nouvelles questions FAQ sur comparaison
- Meta descriptions enrichies
- Mots-clés longue traîne ajoutés

 Technique:
- Installation Chart.js 4.5.1
- Classe ComparaisonNotaire pour gestion état
- Détection doublons avec remplacement
- Graphique responsive avec tooltips

--- a/src/pages/crypto-bourse.html
+++ b/src/pages/crypto-bourse.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      ₿ Plus-values Crypto & Bourse 2025 - Optimisez vos impôts
-    </title>
+    <title>₿ Plus-values Crypto & Bourse 2025 - Optimisez vos impôts</title>
     <meta
       name="description"
       content="Calculez vos plus-values crypto et bourse 2025. Réduisez vos impôts avec les abattements : Bitcoin, actions, ETF. Simulation fiscale gratuite."
