--- a/src/pages/financement.html
+++ b/src/pages/financement.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      💳 Financement Personnel 2025 - Crédit rapide et facile
-    </title>
+    <title>💳 Financement Personnel 2025 - Crédit rapide et facile</title>
     <meta
       name="description"
       content="Simulez votre crédit personnel 2025 : voiture, travaux, équipements. Calculez vos mensualités et obtenez une réponse de principe en 2 minutes."
