--- a/src/pages/ponts.html
+++ b/src/pages/ponts.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      📅 Ponts 2025-2026 - Optimisez vos congés payés
-    </title>
+    <title>📅 Ponts 2025-2026 - Optimisez vos congés payés</title>
     <meta
       name="description"
       content="Découvrez les meilleurs ponts 2025-2026 pour gagner jusqu'à 15 jours de congés supplémentaires. Calendrier optimisé pour vos vacances."
