--- a/src/pages/crypto-bourse.html
+++ b/src/pages/crypto-bourse.html
@@ -592,6 +592,23 @@
       </section>
     </main>
 
+    <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-8">
+      <div class="bg-white border-2 border-gray-200 rounded-lg p-6">
+        <h3 class="text-xl font-bold text-gray-900 mb-3">🔗 Voir aussi</h3>
+        <div class="flex flex-wrap gap-3">
+          <a href="/pages/notaire.html" class="inline-block bg-white border border-gray-300 rounded px-3 py-2 text-sm text-blue-700 hover:bg-blue-50">Frais de notaire</a>
+          <a href="/pages/pret.html" class="inline-block bg-white border border-gray-300 rounded px-3 py-2 text-sm text-blue-700 hover:bg-blue-50">Mensualité de prêt</a>
+          <a href="/pages/plusvalue.html" class="inline-block bg-white border border-gray-300 rounded px-3 py-2 text-sm text-blue-700 hover:bg-blue-50">Plus‑value immobilière</a>
+          <a href="/pages/charges.html" class="inline-block bg-white border border-gray-300 rounded px-3 py-2 text-sm text-blue-700 hover:bg-blue-50">Charges de copropriété</a>
+          <a href="/pages/taxe.html" class="inline-block bg-white border border-gray-300 rounded px-3 py-2 text-sm text-blue-700 hover:bg-blue-50">Taxe foncière</a>
+          <a href="/pages/ik.html" class="inline-block bg-white border border-gray-300 rounded px-3 py-2 text-sm text-blue-700 hover:bg-blue-50">Frais kilométriques</a>
+          <a href="/pages/travail.html" class="inline-block bg-white border border-gray-300 rounded px-3 py-2 text-sm text-blue-700 hover:bg-blue-50">Temps de travail</a>
+          <a href="/pages/blog/frais-notaire-departements.html" class="inline-block bg-blue-600 text-white rounded px-4 py-2 text-sm font-semibold shadow hover:bg-blue-700">Tous les départements</a>
+          <a href="/pages/blog.html" class="inline-block bg-white border border-gray-300 rounded px-3 py-2 text-sm text-blue-700 hover:bg-blue-50">Blog</a>
+        </div>
+      </div>
+    </section>
+
     <footer class="bg-gray-800 text-white py-8 mt-16">
       <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
         <p class="text-gray-300">
